# WatfordBingoBackend

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: gcp_deploy.yml
backend/: watford_occurances.py
