[tool.poetry]
name = "watfordbingobackend"
version = "0.1.0"
description = ""
authors = ["Alex"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
